fixed size of chat box on narrow screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -223,6 +223,10 @@ body {
     overflow-y: scroll;
 }
 
+#chat-title {
+    width: 27vw; height: 4vh;
+}
+
 #close-chat-modal {
     display: hidden
 }
